--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-"C:\Users\Илья\Desktop\LR_DERETIUK_GIT1\imgs\IMG_0978.jpg"
-,,,,,
-))))
-((((
-))))
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = "UTF-8">
+        <title> Hello!!!</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
